--- a/app/src/styles/scss/style.scss
+++ b/app/src/styles/scss/style.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap');
 /**
 *   CARD
 *     MEDIA
@@ -25,13 +26,25 @@
   padding: 0;
 }
 
+body {
+  min-width: 100vw;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  background-color: hsl(185, 75%, 39%);
+  font-size: 1.125rem;
+  font-family: 'Kumbh Sans', sans-serif;
+}
+
 
 .card {
   &__media {}
 
 
   &__body {}
-  
+
   &__title {}
 
   &__name {}
@@ -40,20 +53,22 @@
 
   &__description {}
 
-  
-  
+
+
   &__info {}
-  
+
   &__info-item {}
-  
+
   &__count {}
-  
+
   &__count-description {}
 }
 
 .attribution {
+  font-size: 11px;
+  text-align: center;
 
   a {
-
+    color: hsl(228, 45%, 44%);
   }
 }
