--- a/app/src/styles/style.css
+++ b/app/src/styles/style.css
@@ -36,6 +36,17 @@ body {
   font-family: "Kumbh Sans", sans-serif;
 }
 
+.card {
+  margin: 2rem auto;
+  min-width: 43rem;
+  border: 1px solid black;
+}
+.card__media {
+  background-color: #00c7c4;
+}
+.card__body {
+  background-color: white;
+}
 .attribution {
   font-size: 11px;
   text-align: center;
