Change the some htlm tags to more appropriate

--- a/app/src/styles/scss/style.scss
+++ b/app/src/styles/scss/style.scss
@@ -54,7 +54,10 @@ body {
     background-color:  white;
   }
 
-  &__title {}
+  &__title {
+    display: flex;
+    justify-content: center;
+  }
 
   &__name {}
 
