--- a/app/src/styles/scss/style.scss
+++ b/app/src/styles/scss/style.scss
@@ -48,7 +48,7 @@ body {
 
 .card {
   margin: 2rem auto;
-  max-width: 43rem;
+  min-width: 30rem;
   min-height: $card-height;
 
   border: 1px solid black;
@@ -74,7 +74,6 @@ body {
         column-gap: .5rem;
       }
         &__name {
-          font-size: 1.25rem;
           font-weight: 700;
         }
         &__age {
@@ -83,6 +82,8 @@ body {
       &__description {
         display: flex;
         justify-content: center;
+
+        font-size: .9rem;
       }
 
 
@@ -91,12 +92,23 @@ body {
       display: flex;
       justify-content: space-around;
 
-      border-top: .1px solid gray;
+      border-top: .1px solid hsl(0, 0%, 59%);
     }
 
-    &__info-item {}
-      &__count {}
-      &__count-description {}
+    &__info-item {
+      margin-top: 1.5rem;
+      margin-bottom: 1.2rem;
+    }
+      &__count {
+        font-weight: 700;
+        text-align: center;
+      }
+      &__count-description {
+        color: hsl(0, 0%, 59%);
+        font-size: .9rem;
+        text-align: center;
+        letter-spacing: .1rem;
+      }
 } 
 
 .attribution {
