--- a/app/src/styles/style.css
+++ b/app/src/styles/style.css
@@ -39,7 +39,7 @@ body {
 
 .card {
   margin: 2rem auto;
-  max-width: 43rem;
+  min-width: 30rem;
   min-height: 25rem;
   border: 1px solid black;
 }
@@ -60,7 +60,6 @@ body {
   column-gap: 0.5rem;
 }
 .card__name {
-  font-size: 1.25rem;
   font-weight: 700;
 }
 .card__age {
@@ -69,13 +68,29 @@ body {
 .card__description {
   display: flex;
   justify-content: center;
+  font-size: 0.9rem;
 }
 .card__info {
   min-height: 5rem;
   display: flex;
   justify-content: space-around;
-  border-top: 0.1px solid gray;
+  border-top: 0.1px solid #969696;
 }
+.card__info-item {
+  margin-top: 1.5rem;
+  margin-bottom: 1.2rem;
+}
+.card__count {
+  font-weight: 700;
+  text-align: center;
+}
+.card__count-description {
+  color: #969696;
+  font-size: 0.9rem;
+  text-align: center;
+  letter-spacing: 0.1rem;
+}
+
 .attribution {
   font-size: 11px;
   text-align: center;
