--- a/app/src/styles/scss/style.scss
+++ b/app/src/styles/scss/style.scss
@@ -20,12 +20,12 @@
 *           COUNT
 *           DESCRIPTION
 **/
-$card-height: 25rem;
+$card-height: 24rem;
   $media-height: ($card-height / 5) * 2;
   $body-height: ($card-height / 5) * 3;
     $profile-height: ($body-height / 3) * 2;
     $info-height: ($body-height / 3);
-
+$card-width: ($card-height / 8) * 7;
 
 * {
   box-sizing: border-box;
@@ -38,7 +38,7 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
 
   background-color: hsl(185, 75%, 39%);
   font-size: 1.125rem;
@@ -48,15 +48,28 @@ body {
 
 .card {
   margin: 2rem auto;
-  min-width: 30rem;
+  min-width: $card-width;
   min-height: $card-height;
 
-  border: 1px solid black;
+  border-radius: 1.8rem;
+  overflow: hidden;
 
   &__media {
     min-height: $media-height;
+    position: relative;
 
     background-color: hsl(179, 100%, 39%);
+
+    img {
+      display: block;
+      position: absolute;
+      left: 34%;
+      top: 70%;
+      min-width: 6.8rem;
+
+      border-radius: 50%;
+      outline: 5px solid white;
+    }
   }
 
 
@@ -70,7 +83,7 @@ body {
       display: flex;
       flex-direction: column;
       justify-content: flex-end;
-      margin-bottom: 1.6rem;
+      margin-bottom: 2rem;
 
     }
       &__title {
