--- a/app/src/styles/scss/style.scss
+++ b/app/src/styles/scss/style.scss
@@ -21,11 +21,12 @@
 *           DESCRIPTION
 **/
 $card-height: 24rem;
-  $media-height: ($card-height / 5) * 2;
-  $body-height: ($card-height / 5) * 3;
-    $profile-height: ($body-height / 3) * 2;
-    $info-height: ($body-height / 3);
-$card-width: ($card-height / 8) * 7;
+  $media-height: calc(($card-height / 5) * 2);
+  $body-height: calc(($card-height / 5) * 3);
+    $profile-height: calc(($body-height / 3) * 2);
+    $info-height: calc(($body-height / 3));
+$card-width: calc(($card-height / 8) * 7);
+
 
 * {
   box-sizing: border-box;
@@ -53,6 +54,10 @@ body {
 
   border-radius: 1.8rem;
   overflow: hidden;
+
+  @media (max-width: 400px) {
+    min-width: 19rem;
+  }
 
   &__media {
     min-height: $media-height;
@@ -132,6 +137,7 @@ body {
 } 
 
 .attribution {
+  margin-top: auto;
   font-size: 11px;
   text-align: center;
 
